improve color contrast + add correct logo description

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1658,7 +1658,8 @@ mark {
 }
 
 .text-center {
-    text-align: center
+    text-align: center;
+    color:#000000;
 }
 
 .text-justify {
